[package]
name = "alarm-clock"
version = "0.1.0"
authors = ["ddrdmakar <dedrtos@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"

embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"

[dependencies.time]
version = "0.3.30"
default-features = false
features = ["macros"]

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f401", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
